--- a/frontend/settings.html
+++ b/frontend/settings.html
@@ -2,49 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TukTuk</title>
+    <title>Megascan Leak Monitor</title>
     <link rel="stylesheet" href ="static/css/styles.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue"></script>
+
+    <style>
+        main > .container {
+            padding: 60px 15px 0;
+        }
+
+        .footer {
+            background-color: #f5f5f5;
+        }
+
+        .footer > .container {
+            padding-right: 15px;
+            padding-left: 15px;
+        }
+
+        code {
+            font-size: 80%;
+        }
+    </style>
+
 </head>
 <body>
-    <h1 class="text-center">TukTuk Collaborator Project</h1>
-    <div class="text-center">
-        <a href="/dns">DNS management</a>
-    </div>
-    <br>
-    <div class="text-center">
-        <a href="/tcp">TCP management</a>
-    </div>
+        <h1 class="text-center">Megascan Leak Monitoring</h1>
         <div id="app" class="container mt-4">
-            <div class="text-center">
-                <button @click="TurnFTPon()" type="button" class="btn btn-outline-primary">FTP ON</button>
-                <button @click="TurnFTPoff()" type="button" class="btn btn-outline-primary">FTP OFF</button>
-                <p v-if="startFTP_success === true">FTP started</p>
-                <p v-if="startFTP_success === false">Failed to start FTP</p>
-                <p v-if="stopFTP_success === true">FTP stopped</p>
-                <p v-if="stopFTP_success === false">Failed to stop FTP</p>
-            </div>
-            <div class="text-center">
-                <button @click="TurnSMBon()" type="button" class="btn btn-outline-primary">SMB ON</button>
-                <button @click="TurnSMBoff()" type="button" class="btn btn-outline-primary">SMB OFF</button>
-                <p v-if="startSMB_success === true">SMB started</p>
-                <p v-if="startSMB_success === false">Failed to start SMB</p>
-                <p v-if="stopSMB_success === true">SMB stopped</p>
-                <p v-if="stopSMB_success === false">Failed to stop SMB</p>
-            </div>
-            <br>
-            <div class="buttons">
-                <button @click="getData('http')" type="button" class="btn btn-outline-primary">HTTP</button>
-                <button @click="getData('https')" type="button" class="btn btn-outline-primary">HTTPS</button>
-                <button @click="getData('dns')" type="button" class="btn btn-outline-primary">DNS</button>
-                <button @click="getData('ftp')" type="button" class="btn btn-outline-primary">FTP</button>
-                <button @click="getData('smtp')" type="button" class="btn btn-outline-primary">SMTP</button>
-                <button @click="getData('ldap')" type="button" class="btn btn-outline-primary">LDAP</button>
-                <button @click="getData('smb')" type="button" class="btn btn-outline-primary">SMB</button>
-                <br>
-            </div>
+            <header>
+                <!-- Fixed navbar -->
+                <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+                  <a class="navbar-brand" href="#">Megascan</a>
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav mr-auto">
+                      <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Github </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#" @click="getData('http')" >Test</a>
+                      </li>
+        
+                      <li class="nav-item">
+                        <a class="nav-link disabled" href="#" @click="getData('http')" tabindex="-1" aria-disabled="true">Gist</a>
+                      </li>
+        
+                      <li class="nav-item">
+                        <a class="nav-link" href="settings.html">Settings</a>
+                      </li>
+                    </ul>
+                    <!-- 
+                    <form class="form-inline mt-2 mt-md-0">
+                      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                    -->
+                  </div>
+                </nav>
+              </header>
         <table class="table table-bordered">
             <thead>
             <tr>
