--- a/frontend/index_modern.html
+++ b/frontend/index_modern.html
@@ -6,41 +6,41 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="https://unpkg.com/vue"></script>
-    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <style>
-      main > .container {
-      padding: 60px 15px 0;
-    }
-.footer {
-    background-color: #f5f5f5;
-}
-.footer > .container {
-    padding-right: 15px;
-    padding-left: 15px;
-}
-.highlight {
-    background-color: yellow;
-}
-table.fixed { table-layout:fixed; }
+        main > .container {
+            padding: 60px 15px 0;
+        }
 
-.select-item{
-  width: 500px;
-  max-width: 80%;
-}
-.input-item{
-  width: 300px;
-  max-width: 60%;
-}
+        .footer {
+            background-color: #f5f5f5;
+        }
+
+        .footer > .container {
+            padding-right: 15px;
+            padding-left: 15px;
+        }
+
+        .highlight {
+            background-color: yellow;
+        }
+
+        table.fixed { table-layout:fixed; }
+
+
     </style>
+
 </head>
-
 <body>
+        <h1 class="text-center">Megascan Leak Monitoring</h1>
         <div id="app" class="container mt-4">
-          <header>
-            <h-nav></h-nav>
-          </header>
+            <header>
+                <!-- Fixed navbar -->
+                <h-nav v-bind:navigation="navigation"></h-nav>
+            </header>
 
-          <router-view></router-view>
+
+        <p-nav v-bind:pagination="pagination"></p-nav>
+
         </div>
         <script src="static/js/main.js"></script>
 </body>
